<resources>
    <string name="app_name">GreatDay To-Do-List</string>
    <string name="wlk_des">There are many variations of passagesThere are many variations.</string>
    <string name="wlk_title">Plan your Day in  Details</string>
    <string name="add_category_title">Add Category</string>
    <string name="name_title">Name</string>
    <string name="cat_name_title">Category name</string>
    <string name="cat_choose_icon_title">Choose Icon</string>
    <string name="submit_title">Submit</string>
    <string name="add_task_title">Add Task</string>
    <string name="start_title">Start</string>
    <string name="ends_title">Ends</string>
    <string name="date_format">mm-dd-yyyy</string>
    <string name="task_title">Title</string>
    <string name="category_title">Category</string>
    <string name="description_title">Description</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories_title">Categories</string>
    <string name="add_title">Add</string>
    <string name="task_list_title">Task List</string>
    <string name="select_all_task_title">Select All Task</string>
    <string name="choose_category_title">choose category</string>
</resources>