<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TaskListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/task_list_cat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins"
                android:textSize="18sp"
                android:text="@string/categories_title"
                android:textColor="@color/textPrimary"
                app:layout_constraintTop_toTopOf="@+id/task_list_cat_btn_add"
                app:layout_constraintBottom_toBottomOf="@+id/task_list_cat_btn_add"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_list_cat_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/abel"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/add_title"
                android:textAllCaps="false"
                android:background="@drawable/shape_rectangle_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/task_list_cat_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/task_list_cat_btn_add"/>

            <TextView
                android:id="@+id/task_list_task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins"
                android:textSize="18sp"
                android:text="@string/task_list_title"
                android:textColor="@color/textPrimary"
                app:layout_constraintTop_toTopOf="@+id/task_list_task_btn_add"
                app:layout_constraintBottom_toBottomOf="@+id/task_list_task_btn_add"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_list_task_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/abel"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/add_task_title"
                android:textAllCaps="false"
                android:background="@drawable/shape_rectangle_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_list_cat_container"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/task_list_task_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/task_list_task_btn_add"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/task_list_btn_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abel"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/select_all_task_title"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_rectangle_primary"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"/>
</androidx.constraintlayout.widget.ConstraintLayout>