<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AddTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/add_task_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@drawable/shape_rectangle_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_title"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:background="@drawable/shape_top_radius_big"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/date_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/add_task_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/start_title"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:textColor="@color/textPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/add_task_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_border_input_field"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/date_format"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:gravity="center|start"
                    android:drawablePadding="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_task_start"
                    app:drawableStartCompat="@drawable/ic_baseline_date_range_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/add_task_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/ends_title"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:textColor="@color/textPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/add_task_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_border_input_field"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/date_format"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:gravity="center|start"
                    android:drawablePadding="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_task_end"
                    app:drawableStartCompat="@drawable/ic_baseline_date_range_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/add_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/task_title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toBottomOf="@+id/date_wrapper"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_task_title_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_border_input_field"
            android:fontFamily="@font/poppins"
            android:hint="@string/add_task_title"
            android:inputType="text"
            android:paddingStart="14dp"
            android:paddingEnd="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/add_task_title"/>

        <TextView
            android:id="@+id/add_task_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/category_title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toBottomOf="@+id/add_task_title_field"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_task_category_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:endIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@+id/add_task_category">

            <AutoCompleteTextView
                android:id="@+id/add_task_category_filter"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:dropDownSelector="@drawable/shape_border_input_field"
                android:fontFamily="@font/poppins"
                android:hint="@string/choose_category_title"
                android:inputType="none"
                android:paddingStart="14dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="1"
                tools:ignore="LabelFor"
                android:background="@null"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/add_task_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description_title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toBottomOf="@+id/add_task_category_container"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_task_desc_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_border_input_field"
            android:fontFamily="@font/poppins"
            android:hint="@string/description_title"
            android:inputType="textImeMultiLine|text"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:maxLines="8"
            android:gravity="start"
            android:minHeight="100dp"
            android:maxHeight="176dp"
            app:layout_constraintTop_toBottomOf="@+id/add_task_desc"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_task_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/abel"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/submit_title"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/shape_rectangle_primary"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>