<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AddCategoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/add_cat_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@drawable/shape_rectangle_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category_title"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:background="@drawable/shape_top_radius_big"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/cat_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/name_title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_cat_name_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_border_input_field"
            android:fontFamily="@font/poppins"
            android:hint="@string/cat_name_title"
            android:inputType="text"
            android:paddingStart="14dp"
            android:paddingEnd="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/cat_name_title"/>

        <TextView
            android:id="@+id/cat_choose_icon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cat_choose_icon_title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toBottomOf="@+id/add_cat_name_field"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/icon_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:weightSum="3"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cat_choose_icon_title">

            <ImageView
                android:id="@+id/add_cat_icon_image"
                android:layout_width="0dp"
                android:layout_height="94dp"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/shape_rectangle_thin"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:padding="8dp"
                android:src="@drawable/ic_image_big" />

            <ImageView
                android:id="@+id/add_cat_icon_heart"
                android:layout_width="0dp"
                android:layout_height="94dp"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/shape_rectangle_thin"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:padding="8dp"
                android:src="@drawable/ic_heart_big" />

            <ImageView
                android:id="@+id/add_cat_icon_user"
                android:layout_width="0dp"
                android:layout_height="94dp"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/shape_rectangle_thin"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:padding="8dp"
                android:src="@drawable/ic_3user_big" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/icon_wrapper1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/icon_wrapper">

            <ImageView
                android:id="@+id/add_cat_icon_plus"
                android:layout_width="0dp"
                android:layout_height="94dp"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/shape_rectangle_thin"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:padding="8dp"
                android:src="@drawable/ic_plus_big" />

            <ImageView
                android:id="@+id/add_cat_icon_arrow"
                android:layout_width="0dp"
                android:layout_height="94dp"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/shape_rectangle_thin"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_right_big" />

            <ImageView
                android:id="@+id/add_cat_icon_work"
                android:layout_width="0dp"
                android:layout_height="94dp"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/shape_rectangle_thin"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:padding="8dp"
                android:src="@drawable/ic_work_big" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_cat_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/abel"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/submit_title"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/shape_rectangle_primary"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>